Closed Bug 481109 Opened 15 years ago Closed 15 years ago

Ignore attempts to transition from shutdown to any other state in Wave decoder

Categories

(Core :: Audio/Video, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: kinetik, Assigned: kinetik)

Details

(Keywords: fixed1.9.1)

Attachments

(1 file)

This can happen if the user tries to play or seek rapidly as the media finishes playing back.  I actually ran into this by hitting "play" very quickly while playing back a 70ms long media file.
Attached patch patch v0Splinter Review
Trivial fix.
Assignee: nobody → kinetik
Status: NEW → ASSIGNED
Attachment #365114 - Flags: superreview?(roc)
Attachment #365114 - Flags: review?(roc)
Attachment #365114 - Flags: superreview?(roc)
Attachment #365114 - Flags: superreview+
Attachment #365114 - Flags: review?(roc)
Attachment #365114 - Flags: review+
Whiteboard: [needs landing]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment on attachment 365114 [details] [diff] [review]
patch v0

We need this on 1.9.1 to avoid merge conflicts.
Attachment #365114 - Flags: approval1.9.1+
Keywords: checkin-needed
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: