Bug 481109 - Ignore attempts to transition from shutdown to any other state in Wave decoder. r+sr=roc